[package]
name = "relaygraph"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Build deterministic resource graphs from Git-backed YAML declarations"
repository = "https://github.com/natumekazuki/RelayGraph"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.23"

[dev-dependencies]
jsonschema = { version = "0.46.5", default-features = false }
